--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,13 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+
+dahboard/
+webalizer/
+xampp/
+applications.html
+bitnami.css
+favicon.ico
+index.php
+
+
